# python-skeleton

./: README.md  pyproject.toml
todo_package/: __init__.py
