[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{name = "Ben Soyka", email = "bensoyka@icloud.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = ["TODO: DEPENDENCIES"]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "TODO: NAME"
readme = "README.md"
requires-python = "~=3.6"

[tool.flit.module]
name = "TODO: PACKAGE"

[project.urls]
Changelog = "https://github.com/bsoyka/TODO: REPO/releases"
Documentation = "https://github.com/bsoyka/TODO: REPO/wiki"
Source = "https://github.com/bsoyka/TODO: REPO"

[tool.coverage.run]
source = ["TODO: PACKAGE"]

[tool.coverage.report]
omit = ["tests/*", "setup.py"]
